# mikka-api

./: .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements.txt
src/: settings.py  urls.py
src/users/: admin.py  models.py  serializers.py  views.py
src/users/migrations/: 0001_initial.py
